Archive2/30/21883edf580128/output
main.cpp:129:18: error: no member named 'cout' in namespace 'std'; did you mean 'count'?
            std::cout << udt.i << "\t" << udt.f << "\n";
            ~~~~~^~~~
                 count
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/stl_algo.h:3947:5: note: 'count' declared here
    count(_InputIterator __first, _InputIterator __last, const _Tp& __value)
    ^
main.cpp:129:13: error: reference to overloaded function could not be resolved; did you mean to call it?
            std::cout << udt.i << "\t" << udt.f << "\n";
            ^~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/stl_algo.h:3947:5: note: possible target for call
    count(_InputIterator __first, _InputIterator __last, const _Tp& __value)
    ^
2 errors generated.
